# ModelStream

./: .gitignore  CMakeLists.txt  README.md  compress_project.ps1
build_test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  transfmt_cuda_npp_demo
cmake/: FindFFmpeg.cmake  FindGFlags.cmake  FindGlog.cmake  FindGtest.cmake  FindOpenCV.cmake  HaveFrameworkTarget.cmake  SetupLibraryPaths.cmake  SetupLibraryPaths_ubuntu.cmake  have_cnstream_target.cmake
docs/: thread_safety_analysis.md
framework/: CMakeLists.txt
framework/core/include/: cnstream_collection.hpp  cnstream_common.hpp  cnstream_config.hpp  cnstream_connector.hpp  cnstream_conveyor.hpp  cnstream_eventbus.hpp  cnstream_frame.hpp  cnstream_graph.hpp  cnstream_logging.hpp  cnstream_module.hpp  cnstream_pipeline.hpp  cnstream_source.hpp
framework/core/include/private/: cnstream_common_pri.hpp  cnstream_constants_pri.hpp  cnstream_module_pri.hpp
framework/core/include/profiler/: module_profiler.hpp  process_profiler.hpp  profile.hpp  trace_serialize_helper.hpp
framework/core/include/util/: cnstream_allocator.hpp  cnstream_any.hpp  cnstream_queue.hpp  cnstream_rwlock.hpp
framework/core/include/util/cuda/: cnstream_allocator_cuda.hpp
framework/core/src/: cnstream_collection.cpp  cnstream_config.cpp  cnstream_connector.cpp  cnstream_conveyor.cpp  cnstream_eventbus.cpp  cnstream_frame.cpp  cnstream_graph.cpp  cnstream_module.cpp  cnstream_pipeline.cpp  cnstream_source.cpp
framework/core/src/private/: cnstream_common_pri.cpp  cnstream_module_pri.cpp
framework/core/src/profiler/: circular_buffer.hpp  module_profiler.cpp  process_profiler.cpp  profile.cpp  test_profile_print.cpp  trace_serialize_helper.cpp
framework/unitest/: CMakeLists.txt  base.cpp  main.cpp  test_main.cpp
framework/unitest/core/: test_config.cpp  test_connector.cpp  test_graph.cpp  test_logging.cpp  test_module.cpp  test_pipeline.cpp  test_rwlock.cpp
framework/unitest/include/: base.hpp  test_base.hpp
framework/unittest/: CMakeLists.txt  main.cpp
framework/unittest/core/: test_allocator.cpp  test_config.cpp  test_connector.cpp  test_graph.cpp  test_logging.cpp  test_module.cpp  test_pipeline.cpp  test_profiler.cpp  test_queue.cpp
framework/unittest/include/: base.hpp
modules/: CMakeLists.txt  cnstream_frame_va.cpp  cnstream_frame_va.hpp
modules/Inference/include/: inferencer.hpp
modules/Inference/src/: infer_params.cpp  infer_params.hpp  infer_trans_data_helper.cpp  inferencer.cpp  queuing_server.cpp  queuing_server.hpp
modules/source/include/: data_handler_image.hpp  data_handler_image_queue.hpp  data_handler_util.hpp  data_handler_video.hpp  data_source.hpp  data_source_param.hpp  video_decoder.hpp  video_parser.hpp
modules/source/src/: data_handler_image.cpp  data_handler_image_queue.cpp  data_handler_util.cpp  data_handler_video.cpp  data_source.cpp
modules/unittest/: CMakeLists.txt  base.cpp  main.cpp
modules/unittest/include/: base.hpp
modules/unittest/source/: test_source.cpp
modules/unittest/util/: test_allocator.cpp  test_memop.cpp  test_syncmem.cpp
modules/unittest/util/cuda/: test_allocator_cuda.cpp  test_memop_cuda.cpp
modules/util/include/: cnstream_allocator.hpp  cnstream_syncmem.hpp  data_source_param.hpp  memop.hpp  memop_factory.hpp
modules/util/include/cuda/: cnstream_allocator_cuda.hpp  cnstream_syncmem_cuda.hpp  cnstream_sysncmem_cuda.hpp  cuda_check.hpp  inspect_mem.hpp  memop_cuda.hpp  transfmt_cuda.cuh
modules/util/src/: cnstream_syncmem.cpp  memop.cpp  memop_factory.cpp
modules/util/src/cuda/: cnstream_syncmem_cuda.cpp  cnstream_sysncmem_cuda.cpp  memop_cuda.cpp  transfmt_cuda.cu
tools/: CMakeLists.txt
tools/demo/: CMakeLists.txt  json_parse.cpp  json_parse_demo.cpp  libyuv_demo.cpp  libyuv_demo.cpp.bak  pipeline.json
tools/demo/cuda/: CMakeLists.txt  inspect_mem.cpp  transfmt_cuda_demo.cu  transfmt_cuda_kernel_demo.cu  transfmt_cuda_npp_demo.cu
tools/demo/cuda/nvidia-decode/: CMakeLists.txt
tools/demo/cuda/nvidia-decode/include/: decode.h  decode_server.h  frame_server.h  utils.h
tools/demo/cuda/nvidia-decode/src/: decode.cpp  decode_server.cpp  frame_server.cpp  main.cpp  utils.cpp
tools/demo/trt/: CMakeLists.txt  builder.hpp
tools/inspect/: CMakeLists.txt  cnstream_inspect.cpp
